# ai-builder

./: README.md  pyproject.toml
.github/workflows/: ci-cd.yaml
ai_builder/: __init__.py  evaluator.py  generator.py  orchestrator.py  runtime_pool.py
docker/: docker-compose.yml  requirements.txt  runner.py  runtime.Dockerfile
templates/: faq_bot.yaml
