[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_builder"
version = "0.1.0"
description = "Meta-agent to generate and evaluate AI agents"
authors = [{name = "TODO: Author", email = "TODO@example.com"}]
dependencies = [
    "openai>=1.24,<2",
    "langchain>=0.2",
    "langgraph>=0.0.39",
    "python-dotenv",
    "pyyaml",
    "tenacity",
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_builder"]
